--- a/SanCamilo/litotricia/contacto.html
+++ b/SanCamilo/litotricia/contacto.html
@@ -8,8 +8,8 @@
 	<meta name="description" content="Clínica San Camilo: Contacto para consultas y atención en litotricia. Completa el formulario para programar tu visita o contáctanos por teléfono o email">
 	<meta name="keywords" content="Litotricia San Camilo, consultas, contacto, tratamiento litotricia">
 	<!-- TITLE -->
-	<title>Contácto - Litotricia San Camilo.</title>
-
+	<title>Contáctenos - Litotricia San Camilo.</title>
+	<link rel="canonical" href="https://www.litotriciasancamilo.com.ar/contacto.html">
 	<!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700" rel="stylesheet">
 
