--- a/SanCamilo/litotricia/index.html
+++ b/SanCamilo/litotricia/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
-    <meta name="google-site-verification" content="_VMapjQwIaJ98V9NQHcgrphsPRhfCnTEAgOxwMvChlQ" />
+    <meta
+      name="google-site-verification"
+      content="_VMapjQwIaJ98V9NQHcgrphsPRhfCnTEAgOxwMvChlQ"
+    />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -18,7 +21,7 @@
       content="Especialistas en litotricia, tratamiento de litiasis, Clínica San Camilo, Buenos Aires"
     />
     <!-- TITLE -->
-    <title>Inicio - Litotricia San Camilo.</title>
+    <title>Litotricia extracorpórea - Litotricia San Camilo.</title>
 
     <!-- FONTS -->
     <link
@@ -29,7 +32,10 @@
     <!-- ICONS -->
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css" />
-
+    <link
+      rel="canonical"
+      href="https://www.litotriciasancamilo.com.ar/index.html"
+    />
     <!-- Favicons -->
     <link
       rel="icon shortcut"
@@ -149,7 +155,11 @@
           <div class="collapse navbar-collapse navbar-items" id="navbar-items">
             <ul class="nav navbar-nav navbar-right">
               <li class="active dropdown menu-large">
-                <a href="index.html">Home</a>
+                <a
+                  href="
+                https://litotriciasancamilo.com.ar/"
+                  >Home</a
+                >
               </li>
               <li class="dropdown">
                 <a href="beneficios.html">Beneficios</a>
