--- a/SanCamilo/litotricia/preguntas.html
+++ b/SanCamilo/litotricia/preguntas.html
@@ -19,7 +19,7 @@
 
     <!-- TITLE -->
     <title>Preguntas frecuentes - Litotricia San Camilo.</title>
-
+    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/preguntas.html">
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
