--- a/SanCamilo/litotricia/tecnologia.html
+++ b/SanCamilo/litotricia/tecnologia.html
@@ -19,7 +19,7 @@
     />
     <!-- TITLE -->
     <title>Tecnología - Litotricia San Camilo</title>
-
+    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/tecnologia.html">
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
