--- a/SanCamilo/litotricia/beneficios.html
+++ b/SanCamilo/litotricia/beneficios.html
@@ -12,11 +12,14 @@
       name="description"
       content="Conózca los beneficios de la litotricia extracorpórea en Clínica San Camilo: tratamiento no invasivo para cálculos urinarios con ondas de choque."
     />
-	<meta name="keywords" content="Litotricia extracorpórea, tratamiento de cálculos urinarios, Clínica San Camilo, tecnología avanzada
-	">
+    <meta
+      name="keywords"
+      content="Litotricia extracorpórea, tratamiento de cálculos urinarios, Clínica San Camilo, tecnología avanzada
+	"
+    />
     <!-- TITLE -->
     <title>Beneficios - Litotricia San Camilo.</title>
-
+    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/beneficios.html" />
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
