--- a/SanCamilo/litotricia/equipo.html
+++ b/SanCamilo/litotricia/equipo.html
@@ -18,8 +18,8 @@
     />
 	
     <!-- TITLE -->
-    <title>Equipo médico - Litotricia San Camilo.</title>
-
+    <title>Nuestro equipo médico - Litotricia San Camilo.</title>
+    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/equipo.html">
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
