--- a/SanCamilo/litotricia/obrassociales.html
+++ b/SanCamilo/litotricia/obrassociales.html
@@ -13,9 +13,12 @@
       content="Descubra las obras sociales que atendemos en Litotricia San Camilo. Consulte nuestra lista y contáctenos si su obra social no está incluida."
     />
     <meta name="keywords" content="Litotricia San Camilo, obras sociales" />
-
+    <link
+      rel="canonical"
+      href="https://www.litotriciasancamilo.com.ar/obrassociales.html"
+    />
     <!-- TITLE -->
-    <title>Obras sociales - Litotricia San Camilo.</title>
+    <title>Obras sociales que atendemos - Litotricia San Camilo.</title>
 
     <!-- FONTS -->
     <link
