--- a/SanCamilo/litotricia/servicios.html
+++ b/SanCamilo/litotricia/servicios.html
@@ -20,7 +20,7 @@
     />
     <!-- TITLE -->
     <title>Servicios - Litotricia San Camilo.</title>
-
+    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/servicios.html">
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
