meta tags missing added

--- a/SanCamilo/litotricia/equipo.html
+++ b/SanCamilo/litotricia/equipo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
     <meta charset="utf-8" />
@@ -16,6 +16,10 @@
       name="keywords"
       content="Equipo de Urología Clínica San Camilo, atención humana, calidad de vida"
     />
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
 	
     <!-- TITLE -->
     <title>Nuestro equipo médico - Litotricia San Camilo.</title>
