--- a/SanCamilo/litotricia/index.html
+++ b/SanCamilo/litotricia/index.html
@@ -20,6 +20,10 @@
       name="keywords"
       content="Especialistas en litotricia, tratamiento de litiasis, Clínica San Camilo, Buenos Aires"
     />
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
     <!-- TITLE -->
     <title>Litotricia extracorpórea - Litotricia San Camilo.</title>
 
