--- a/SanCamilo/litotricia/obrassociales.html
+++ b/SanCamilo/litotricia/obrassociales.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
     <meta charset="utf-8" />
@@ -13,6 +13,10 @@
       content="Descubra las obras sociales que atendemos en Litotricia San Camilo. Consulte nuestra lista y contáctenos si su obra social no está incluida."
     />
     <meta name="keywords" content="Litotricia San Camilo, obras sociales" />
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
     <link
       rel="canonical"
       href="https://www.litotriciasancamilo.com.ar/obrassociales.html"
