--- a/SanCamilo/litotricia/preguntas.html
+++ b/SanCamilo/litotricia/preguntas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
     <meta charset="utf-8" />
@@ -16,7 +16,10 @@
       name="keywords"
       content="Preguntas frecuentes sobre litotricia extracorpórea: tratamiento, ventajas y cuidados"
     />
-
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
     <!-- TITLE -->
     <title>Preguntas frecuentes - Litotricia San Camilo.</title>
     <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/preguntas.html">
