--- a/SanCamilo/litotricia/servicios.html
+++ b/SanCamilo/litotricia/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
     <meta charset="utf-8" />
@@ -18,6 +18,10 @@
       content="Tratamientos urológicos avanzados, Clínica San Camilo, litotricia extracorpórea, láser de holmium, láser Holep
 	"
     />
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
     <!-- TITLE -->
     <title>Servicios - Litotricia San Camilo.</title>
     <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/servicios.html">
