--- a/SanCamilo/litotricia/contacto.html
+++ b/SanCamilo/litotricia/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<!-- META -->
 	<meta charset="utf-8">
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
 	<meta name="description" content="Clínica San Camilo: Contacto para consultas y atención en litotricia. Completa el formulario para programar tu visita o contáctanos por teléfono o email">
 	<meta name="keywords" content="Litotricia San Camilo, consultas, contacto, tratamiento litotricia">
+	<meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
 	<!-- TITLE -->
 	<title>Contáctenos - Litotricia San Camilo.</title>
 	<link rel="canonical" href="https://www.litotriciasancamilo.com.ar/contacto.html">
