--- a/SanCamilo/litotricia/tecnologia.html
+++ b/SanCamilo/litotricia/tecnologia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <!-- META -->
     <meta charset="utf-8" />
@@ -17,6 +17,10 @@
       content="Litotricia extracorpórea, Dornier Sigma, Láser de Holmium
 	"
     />
+    <meta name="robots" content="index, follow, max-snippet:-1">
+    <meta name="author" content="Agencia Noon">
+    <meta name="publisher" content="Agencia Noon">
+    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
     <!-- TITLE -->
     <title>Tecnología - Litotricia San Camilo</title>
     <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/tecnologia.html">
