"Updated layout and page components, added metadata and SEO tags, and modified Tailwind config"

--- a/SanCamilo/litotricia/index.html
+++ b/SanCamilo/litotricia/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WZHCS0DQTQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WZHCS0DQTQ");
+    </script>
     <!-- META -->
     <meta
       name="google-site-verification"
@@ -20,12 +34,15 @@
       name="keywords"
       content="Especialistas en litotricia, tratamiento de litiasis, Clínica San Camilo, Buenos Aires"
     />
-    <meta name="robots" content="index, follow, max-snippet:-1">
-    <meta name="author" content="Agencia Noon">
-    <meta name="publisher" content="Agencia Noon">
-    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
+    <meta name="robots" content="index, follow, max-snippet:-1" />
+    <meta name="author" content="Agencia Noon" />
+    <meta name="publisher" content="Agencia Noon" />
+    <meta
+      name="seo-author"
+      content="https://www.linkedin.com/in/martinrodrigomatias/"
+    />
     <!-- TITLE -->
-    <title>Litotricia extracorpórea - Litotricia San Camilo.</title>
+    <title>Litotricia San Camilo - Inicio.</title>
 
     <!-- FONTS -->
     <link
@@ -80,6 +97,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
+
   <body class="home-01">
     <!-- preloader -->
     <div class="corporex-preloader">
