--- a/SanCamilo/litotricia/obrassociales.html
+++ b/SanCamilo/litotricia/obrassociales.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WZHCS0DQTQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WZHCS0DQTQ");
+    </script>
     <!-- META -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,10 +27,13 @@
       content="Descubra las obras sociales que atendemos en Litotricia San Camilo. Consulte nuestra lista y contáctenos si su obra social no está incluida."
     />
     <meta name="keywords" content="Litotricia San Camilo, obras sociales" />
-    <meta name="robots" content="index, follow, max-snippet:-1">
-    <meta name="author" content="Agencia Noon">
-    <meta name="publisher" content="Agencia Noon">
-    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
+    <meta name="robots" content="index, follow, max-snippet:-1" />
+    <meta name="author" content="Agencia Noon" />
+    <meta name="publisher" content="Agencia Noon" />
+    <meta
+      name="seo-author"
+      content="https://www.linkedin.com/in/martinrodrigomatias/"
+    />
     <link
       rel="canonical"
       href="https://www.litotriciasancamilo.com.ar/obrassociales.html"
