--- a/SanCamilo/litotricia/beneficios.html
+++ b/SanCamilo/litotricia/beneficios.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WZHCS0DQTQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WZHCS0DQTQ");
+    </script>
     <!-- META -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,13 +31,19 @@
       content="Litotricia extracorpórea, tratamiento de cálculos urinarios, Clínica San Camilo, tecnología avanzada
 	"
     />
-    <meta name="robots" content="index, follow, max-snippet:-1">
-    <meta name="author" content="Agencia Noon">
-    <meta name="publisher" content="Agencia Noon">
-    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
+    <meta name="robots" content="index, follow, max-snippet:-1" />
+    <meta name="author" content="Agencia Noon" />
+    <meta name="publisher" content="Agencia Noon" />
+    <meta
+      name="seo-author"
+      content="https://www.linkedin.com/in/martinrodrigomatias/"
+    />
     <!-- TITLE -->
     <title>Beneficios - Litotricia San Camilo.</title>
-    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/beneficios.html" />
+    <link
+      rel="canonical"
+      href="https://www.litotriciasancamilo.com.ar/beneficios.html"
+    />
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
@@ -120,7 +140,7 @@
           <div class="collapse navbar-collapse navbar-items" id="navbar-items">
             <ul class="nav navbar-nav navbar-right">
               <li class="active dropdown menu-large">
-                <a href="index.html">Home</a>
+                <a href="https://www.litotriciasancamilo.com.ar/ ">Home</a>
               </li>
               <li class="dropdown">
                 <a href="beneficios.html">Beneficios</a>
