--- a/SanCamilo/litotricia/servicios.html
+++ b/SanCamilo/litotricia/servicios.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WZHCS0DQTQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WZHCS0DQTQ");
+    </script>
     <!-- META -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,13 +32,19 @@
       content="Tratamientos urológicos avanzados, Clínica San Camilo, litotricia extracorpórea, láser de holmium, láser Holep
 	"
     />
-    <meta name="robots" content="index, follow, max-snippet:-1">
-    <meta name="author" content="Agencia Noon">
-    <meta name="publisher" content="Agencia Noon">
-    <meta name="seo-author" content="https://www.linkedin.com/in/martinrodrigomatias/">
+    <meta name="robots" content="index, follow, max-snippet:-1" />
+    <meta name="author" content="Agencia Noon" />
+    <meta name="publisher" content="Agencia Noon" />
+    <meta
+      name="seo-author"
+      content="https://www.linkedin.com/in/martinrodrigomatias/"
+    />
     <!-- TITLE -->
     <title>Servicios - Litotricia San Camilo.</title>
-    <link rel="canonical" href="https://www.litotriciasancamilo.com.ar/servicios.html">
+    <link
+      rel="canonical"
+      href="https://www.litotriciasancamilo.com.ar/servicios.html"
+    />
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,700%7CRoboto:400,400i,700"
